--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="apple-touch-icon" type="image/png" href="src/assets/images/icons/logo.png" sizes="180x180">
+    <link rel="icon" type="image/png" href="src/assets/images/icons/logo.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="src/assets/images/icons/logo.png" sizes="16x16">
     <title>Kestenbaum</title>
   </head>
   <body>
