--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link rel="apple-touch-icon" type="image/png" href="src/assets/images/icons/logo.png" sizes="180x180">
     <link rel="icon" type="image/png" href="src/assets/images/icons/logo.png" sizes="32x32">
     <link rel="icon" type="image/png" href="src/assets/images/icons/logo.png" sizes="16x16">
+    <link rel="icon" href="/public/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>Kestenbaum</title>
   </head>
   <body>
